# transect-transformer

./: .gitignore  CLAUDE.md  DATA_REQUIREMENTS.md  GEMINI.md  LICENSE  README.md  environment.yml  plan.md  pyproject.toml  requirements.txt  setup.py  todo.md  train.py
.streamlit/: config.toml
apps/: __init__.py
apps/transect_labeler/: __init__.py  app.py  config.py
apps/transect_viewer/: __init__.py  app.py  config.py
configs/: README.md  default.yaml  phase1_risk_only.yaml  phase2_add_retreat.yaml  phase3_add_collapse.yaml  phase4_full.yaml  susceptibility_v1.yaml
data/metadata/: beach_atmos_config.json
data/raw/: master_list.csv
data/survey_lists/: surveys_Blacks.csv  surveys_DelMar.csv  surveys_Encinitas.csv  surveys_SanElijo.csv  surveys_Solana.csv  surveys_Torrey.csv
docs/: DATA_REQUIREMENTS.md  architecture-reference.md  architectures.md  model_plan.md  plan.md  project-evolution.md  todo.md
docs/archive/: model_plan_v1.md  plan_v2_event_supervised.md  streamlit_viewer_plan.md
scripts/: debug_mop_ranges.py  debug_orientation.py  diagnose_coordinates.py  diagnose_shapefile.py  extract_from_shapefile.py  extract_mops_transects.py  extract_specific_transects.py  extract_transects.py  test_transect_extraction.py  train_susceptibility.py  verify_setup.py  visualize_multiple_transects.py
scripts/figure_making/: study_site_fig.py
scripts/processing/: audit_copc.py  clean_transects.py  create_master_survey_list.py  detect_cliff_edges.py  download_cdip_data.py  download_prism_data.py  extract_transects.py  make_copc.py  prepare_atmos_features.py  prepare_training_data.py  qc_cube.py  subset_transects.py
scripts/transects/: README_transect_extraction.md  check_transect_coverage.py  extract_mops_transects.py  extract_transects.py  find_best_transects.py  transect_voxeliser.md  visualize_sample_transect.py
scripts/visualization/: README.md  input_tensor_diagram.py  plot_atmospheric_features.py  plot_prism_coverage.py  quick_wave_summary.py  study_site_fig.py  wave_climate_figures.py
src/: __init__.py
src/data/: README.md  __init__.py  atmos_features.py  atmos_loader.py  cdip_wave_loader.py  dataset.py  kml_parser.py  shapefile_parser.py  shapefile_transect_extractor.py  spatial_filter.py  susceptibility_dataset.py  synthetic.py  transect_extractor.py  transect_processor.py  transect_voxelizer.py  wave_features.py  wave_loader.py
src/models/: __init__.py  cliffcast.py  environmental_encoder.py  fusion.py  prediction_heads.py  transect_encoder.py
src/training/: __init__.py  losses.py  susceptibility_loss.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_utils.py
tests/test_apps/: __init__.py  test_transect_viewer.py
tests/test_data/: test_atmos_loader.py  test_cliff_delineation.py  test_dataset.py  test_prism_download.py  test_synthetic.py  test_transect_extractor.py  test_wave_features.py  test_wave_loader.py
tests/test_models/: __init__.py  test_cliffcast.py  test_environmental_encoder.py  test_fusion.py  test_prediction_heads.py  test_transect_encoder.py
tests/test_training/: test_losses.py
(+31 files in other folders)
